test/tests/compiler/18_structures/invalid_parse/struct_member_name_kw.plx
# cannot use a keyword (like 'return') as a field name

type struc s (
    return: i32
)

pub fn main(none) i32 {
    return 0
}
